--- a/app/views/Main.scala.html
+++ b/app/views/Main.scala.html
@@ -55,6 +55,19 @@ countries: Map[String, Boolean])(content: Html)
 				</ul>
 				}
 				<ul class="nav navbar-nav navbar-right">
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-search"></span> Search<b class="caret"></b></a>
+            <ul class="dropdown-menu" role="menu">
+              <div class="search">
+                @searchwidget(searchForm("key"),
+                              searchForm("searchType"),
+                              searchForm("country"),
+                              surferTypes,
+                              countries)
+              </div>
+            </ul>
+          </li>
+          <!--  
 					<li class="dropdown"><a id="searchdropdown" class="dropdown-toggle"
 						data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-search"></span> Search<b class="caret"></b></a>
 						<ul class="dropdown-menu">
@@ -65,7 +78,7 @@ countries: Map[String, Boolean])(content: Html)
 							                surferTypes,
 							                countries)
 							</div>
-						</ul></li>
+						</ul></li> -->
 				</ul>
 			</div>
 		</div>
