update jquery. changed from http to https

--- a/app/views/Main.scala.html
+++ b/app/views/Main.scala.html
@@ -85,7 +85,7 @@ countries: Map[String, Boolean])(content: Html)
 	</div>
 	@content
 	<!-- Load Bootstrap JavaScript components. HTMLUnit (used in testing) requires JQuery 1.8.3 or below). -->
-	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+	<script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
