--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -20,6 +20,7 @@ body {
   background-color: white;
   margin-bottom: 75px;
 }
+
 .navbar {
   border-radius: 0;
 }
@@ -66,7 +67,9 @@ thead {
 .navbar-inverse .navbar-toggle {
   border-color: #053376;
 }
-.navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:hover, .navbar-inverse .navbar-nav>.open>a:focus {
+
+.navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:hover, .navbar-inverse .navbar-nav>.open>a:focus
+  {
   background-color: #053376;
 }
 
@@ -80,4 +83,59 @@ thead {
 
 .dropdown {
   margin-right: 20px;
+}
+
+.typeAll {
+  text-align: center;
+}
+
+.surferThumbnail {
+  height: 175px;
+}
+
+.gallery {
+  width: 25em;
+  margin: 2em auto;
+}
+
+.gallery-item {
+  height: auto;
+  width: 48.618784527%;
+  float: left;
+
+  position: relative;
+}
+
+.gallery-item:first-child {
+  margin-right: 2.762430939%;
+}
+
+.gallery-item img {
+  width: 100%;
+}
+
+.gallery-item:hover .img-title {
+  /*opacity: 1;*/
+  
+}
+
+.img-title {
+  position: absolute;
+  top: 0;
+  margin: 0;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  /*opacity: 0;*/
+  display: none; /* comment this out for CSS hover */
+  background-color: #053376;
+  /*transition: all 0.5s ease;*/
+}
+
+.img-title h4 {
+  position: absolute;
+  color: #fff;
+  top: 33%;
+  width: 100%;
+  text-align: center;
 }
