--- a/app/views/Index.scala.html
+++ b/app/views/Index.scala.html
@@ -3,6 +3,7 @@
   
 @Main(page, isLoggedIn, userInfo, searchForm, surferTypes, countries) {
 <div class="container">
+  <div class="well">
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -27,5 +28,6 @@
         </a> <a class="right carousel-control" href="#carousel-example-generic" data-slide="next"> <span class="icon-next"></span>
         </a>
     </div>
+  </div>
 </div>
 }
